fixed ice cube animation

--- a/animations/heat flow.html
+++ b/animations/heat flow.html
@@ -23,7 +23,7 @@
         text-align: center;
         font-size: 8em;
         font-weight: bold;
-        color: lightblue;
+        color: rgba(173,216,230,.8);
         animation: title 9s ease-out forwards;
       }
       #title-page>div {
